--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         <title>Portfolio website</title>
-        <link rel="stylesheet" href="styles/home.css">
+        <link rel="stylesheet" href="Portfolio-website/styles/home.css">
         <header>
             <nav class="navbar">
                 <a class="hide-menu" class="active" href="index.html">Home</a>
-                <a class="hide-menu" href="html/projects.html">Project</a>
-                <a class="hide-menu" href="html/about.html">About</a>
-                <a class="hide-menu" href="html/contact.html">Contact</a>
+                <a class="hide-menu" href="Portfolio-website/html/projects.html">Project</a>
+                <a class="hide-menu" href="Portfolio-website/html/about.html">About</a>
+                <a class="hide-menu" href="Portfolio-website/html/contact.html">Contact</a>
                 <a class="hamburger-icon" onclick="showSidebar()" href="#">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -31,9 +31,9 @@
                     </svg>
                </a>
                 <a class="active" href="index.html">Home</a>
-                <a href="html/projects.html">Project</a>
-                <a href="html/about.html">About</a>
-                <a href="html/contact.html">Contact</a>
+                <a href="Portfolio-website/html/projects.html">Project</a>
+                <a href="Portfolio-website/html/about.html">About</a>
+                <a href="Portfolio-website/html/contact.html">Contact</a>
             </nav>
         </header>
     </head>
@@ -43,20 +43,20 @@
                 <h2>Hi, I'm Bright</h2>
                 <p class="details1">Electrical/Electronics Engineer</p>
                 <p class="details2">Web Developer</p>
-                <a class="btn" href="html/projects.html">View My Work</a>
+                <a class="btn" href="Portfolio-website/html/projects.html">View My Work</a>
             </div>
             <div class="profile">
-                <img src="images/profile.png">
+                <img src="Portfolio-website/images/profile.png">
             </div>
         </div>
         <div class="projects">
             <h3>Projects</h3>
-            <a class="project-text" href="html/projects.html">View All Projects &rightarrow;</a>
+            <a class="project-text" href="Portfolio-website/html/projects.html">View All Projects &rightarrow;</a>
         </div>
         <div class="project-cards">
             <div class="cards">
                 <div class="img-container">
-                    <img src="images/game.png">
+                    <img src="Portfolio-website/images/game.png">
                 </div>
                 <div class="description">
                     <p class="card-text">Rock Paper Scissors Game</p>
@@ -64,7 +64,7 @@
             </div>
             <div class="cards">
                 <div class="img-container">
-                    <img src="images/youtube.jpg">
+                    <img src="Portfolio-website/images/youtube.jpg">
                 </div>
                 <div class="description">
                     <p class="card-text">YouTube Clone</p>
@@ -72,7 +72,7 @@
             </div>
             <div class="cards">
                 <div class="img-container">
-                    <img src="images/portfolio.jpg">
+                    <img src="Portfolio-website/images/portfolio.jpg">
                 </div>
                 <div class="description">
                     <p class="card-text">Portfolio Website</p>
@@ -80,13 +80,13 @@
             </div>
             <div class="cards">
                 <div class="img-container">
-                    <img src="images/landing page.jpg">
+                    <img src="Portfolio-website/images/landing page.jpg">
                 </div>
                 <div class="description">
                     <p class="card-text">Landing Page</p>
                 </div>
             </div>
         </div>
-        <script src="js/home.js"></script>
+        <script src="Portfolio-website/js/home.js"></script>
     </body>
 </html>
