--- a/Portfolio-website/html/projects.html
+++ b/Portfolio-website/html/projects.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../styles/projects.css">
         <header>
             <nav class="navbar">
-                <a class="hide-menu" href="../index.html">Home</a>
+                <a class="hide-menu" href="../../index.html">Home</a>
                 <a class="hide-menu" class="active" href="projects.html">Project</a>
                 <a class="hide-menu" href="about.html">About</a>
                 <a class="hide-menu" href="contact.html">Contact</a>
@@ -29,7 +29,7 @@
                     <line x1="6" y1="6" x2="18" y2="18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                </a>
-                <a href="../index.html">Home</a>
+                <a href="../../index.html">Home</a>
                 <a class="active" href="projects.html">Project</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
