--- a/Portfolio-website/html/about.html
+++ b/Portfolio-website/html/about.html
@@ -59,6 +59,8 @@
             <p class="skill-2">CSS</p>
             <p class="skill-3">Javascript</p>
         </div>
+        <p class="copyright">&copy 2025 Bright Fiadzorgbe | All rights reserved</p>
+        
         <script src="../js/about.js"></script>
     </body>
 </html>
