--- a/Portfolio-website/html/contact.html
+++ b/Portfolio-website/html/contact.html
@@ -41,15 +41,15 @@
         <div class="box-wrap">
             <div class="box">
                 <h3>Get In Touch</h3>
-                <form>
+                <form action="https://formspree.io/f/xqaqwpje" method="POST">
                     <div class="inputs">
-                        <input type="text" placeholder="Name" class="input-field" autocomplete="off" required >
+                        <input type="text" placeholder="Name" class="input-field" name="name" autocomplete="off" required >
                     </div>
                     <div class="inputs">
-                        <input type="email" placeholder="Email" class="input-field" autocomplete="off" required >
+                        <input type="email" placeholder="Email" class="input-field" name="email" autocomplete="off" required >
                     </div>
                     <div class="inputs">
-                        <textarea class="message" placeholder="Message" rows="5" required></textarea>
+                        <textarea class="message" placeholder="Message" rows="5" name="message" required></textarea>
                     </div>
                     <div class="inputs">
                         <button>Send Message</button>
