--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <p class="card-text">Landing Page</p>
                 </div>
             </div>
+            <p class="copyright">&copy 2025 Bright Fiadzorgbe | All rights reserved</p>
         </div>
         <script src="Portfolio-website/js/home.js"></script>
     </body>
