--- a/Portfolio-website/html/about.html
+++ b/Portfolio-website/html/about.html
@@ -59,7 +59,7 @@
             <p class="skill-2">CSS</p>
             <p class="skill-3">Javascript</p>
         </div>
-        <p class="copyright">&copy 2025 Bright Fiadzorgbe | All rights reserved</p>
+        <div class="copyright-container"><p class="copyright">&copy 2025 Bright Fiadzorgbe | All rights reserved</p></div>
         
         <script src="../js/about.js"></script>
     </body>
