--- a/Portfolio-website/html/projects.html
+++ b/Portfolio-website/html/projects.html
@@ -115,6 +115,7 @@
                 </div>
             </div>
         </div>
+        <div class="copyright-container"><p class="copyright">&copy 2025 Bright Fiadzorgbe | All rights reserved</p></div>
         
         <script src="../js/projects.js"></script>
     </body>
